# quadratic_formula_oop

./: .Doxyfile  .gitignore  CMakeLists.txt  README.md
include/: quadratic.h
src/: main.c  quadratic.c
